Cleanup, release 246